deleted database connection

--- a/.env.template
+++ b/.env.template
@@ -4,26 +4,14 @@ ENVIRONMENT=development
 # Deployment
 DOCKER_USERNAME=lmudevelopers
 
-# Database
-POSTGRES_USER=xxxx
-POSTGRES_PASSWORD=xxxx
-POSTGRES_DB=xxxx
-POSTGRES_HOST=xxxx
-POSTGRES_PORT=xxxx
-
-
-# API Keys
-SYSTEM_API_KEY=xxxx
-ADMIN_API_KEY=xxxx
-
+# Translation Service
 DEEPL_API_KEY=xxxx
 
+
+# Movie Services
 TMDB_API_KEY=xxxx
 OMDB_API_KEY=xxxx
 
-# Telegram
-TELEGRAM_BOT_TOKEN=xxxx
-TELEGRAM_CHAT_ID=xxxx
 
 # LLM Keys
 OPENAI_API_KEY=xxxx
